# botanical-latin

./: Cargo.toml  LICENSE  Readme.md  adjectives.csv  nouns.csv  verbs.csv
examples/: sample.rs  test.rs
src/: lib.rs
